# wasmMVG

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT.md  Dockerfile  Makefile  README.md  build.sh  index.html  index.js  main.cpp
.github/workflows/: build-actions.yml
assets/: main.d.ts  package.json
docker/: Dockerfile  docker.sh
docs/: refine_pose.md
example_images/: model.ply
examples/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
examples/pages/: 8point.html  single_view.html  test1.html
examples/src/: main.ts  virtual-page-list.d.ts
examples/src/pages/: 8point.ts  single_view.ts  test1.ts
examples/src/utils/: renderer.js  renderer.ts  vector.js  vector.ts
html/: index.html  index.js  renderer.js  vector.js
src/: wasmMVG.cpp  wasmMVG.h  wasmMVG_bindings.cpp  wasmMVG_bindings.h
test/: test.cpp  utils.h
